REGRESSION: Dromaeo DOM test is 14% slower https://bugs.webkit.org/show_bug.cgi?id=30273

Reviewed by Gavin Barraclough.

Make DOM bindings automatically inherit correct structure
flags rather than being needlessly conservative.  This is
done by making the bindings generator use the same model
for TypeInfo flags that we now use in JSC.

This gains us about 1% of this regression back.

Canonical link: https://commits.webkit.org/41289@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49835 268f45cc-cd09-0410-ab3c-d52691b4dbfc